Build results of b7536e8 (on master)

--- a/dist.ini
+++ b/dist.ini
@@ -6,7 +6,10 @@ copyright_holder = Kent Fredric <kentfredric@gmail.com>
 
 ; Uncomment this to bootstrap via self 
 [Bootstrap::lib]
+try_built = 1
+
 [Bootstrap::ShareDir::Dist]
+try_built = 1
 
 [@Author::KENTNL]
 :version          = 1.2.0
