--- a/META.yml
+++ b/META.yml
@@ -72,7 +72,8 @@ x_Dist_Zilla:
       class: Dist::Zilla::Plugin::Bootstrap::lib
       config:
         Dist::Zilla::Plugin::Bootstrap::lib:
-          try_built: ~
+          fallback: 1
+          try_built: 1
       name: Bootstrap::lib
       version: 0.03000200
     -
@@ -81,9 +82,9 @@ x_Dist_Zilla:
         Dist::Zilla::Plugin::Bootstrap::ShareDir::Dist:
           dir: share
           fallback: ~
-          try_built: ~
+          try_built: 1
       name: Bootstrap::ShareDir::Dist
-      version: ~
+      version: 0.1.0
     -
       class: Dist::Zilla::Plugin::Git::NextVersion
       name: '@Author::KENTNL/Git::NextVersion'
