--- a/META.yml
+++ b/META.yml
@@ -25,6 +25,8 @@ requires:
   Dist::Zilla::Role::Plugin: 0
   Moo: 1.000008
   Path::Tiny: 0
+  Test::File::ShareDir::TempDirObject: 0
+  lib: 0
   perl: v5.10.0
   strict: 0
   warnings: 0
@@ -43,10 +45,12 @@ x_BuiltWith:
     Pod::Coverage::TrustPod: 0.100002
     Test::CPAN::Changes: 0.23
     Test::CPAN::Meta: 0.23
+    Test::File::ShareDir::TempDirObject: 0.3.3
     Test::Kwalitee: 1.13
     Test::More: 0.98
     Test::Pod: 1.48
     Test::Pod::Coverage: 1.08
+    lib: 0.63
     perl: 'NA(skipped: perl)'
     strict: 1.07
     version: 0.9903
