--- a/corpus/fake_dist_02/dist.ini
+++ b/corpus/fake_dist_02/dist.ini
@@ -6,6 +6,8 @@ copyright_holder = Kent Fredric
 
 [Bootstrap::lib]
 try_built = 1
+[Bootstrap::ShareDir::Dist]
+try_built = 1
 
 [MetaConfig]
 [MetaJSON]
