--- a/corpus/fake_dist_05/E-0.01/dist.ini
+++ b/corpus/fake_dist_05/E-0.01/dist.ini
@@ -8,7 +8,13 @@ copyright_holder = Kent Fredric
 try_built = 1
 no_fallback = 1
 
+[Bootstrap::ShareDir::Dist]
+try_built = 1
+no_fallback = 1
+
+
 [MetaConfig]
 [MetaJSON]
 [GatherDir]
 [=E]
+[PruneCruft]
