--- a/corpus/fake_dist_05/dist.ini
+++ b/corpus/fake_dist_05/dist.ini
@@ -8,6 +8,11 @@ copyright_holder = Kent Fredric
 try_built = 1
 no_fallback = 1
 
+[Bootstrap::ShareDir::Dist]
+try_built = 1
+no_fallback = 1
+
+
 [MetaConfig]
 [MetaJSON]
 [GatherDir]
