--- a/dist.ini
+++ b/dist.ini
@@ -25,4 +25,12 @@ git_versions      = 1
 twitter_hash_tags = #perl #cpan
 ; auto_prereqs_skip = File::Find
 
-[Prereqs]
+[FileFinder::ByName / corpusfiles]
+dir = corpus
+match = \.pm$
+
+[AutoPrereqs / corpus]
+test_filder = corpusfiles
+
+File::ShareDir = 0
+
