--- a/META.yml
+++ b/META.yml
@@ -4,6 +4,7 @@ author:
   - 'Kent Fredric <kentfredric@gmail.com>'
 build_requires:
   File::Copy::Recursive: 0
+  File::ShareDir: 0
   IO::Handle: 0
   IPC::Open3: 0
   Module::Build: 0.4007
@@ -44,6 +45,7 @@ x_BuiltWith:
     Dist::Zilla::PluginBundle::Author::KENTNL::Lite: 'NA(possibly not installed)'
     Dist::Zilla::Role::Plugin: 4.300037
     File::Copy::Recursive: 0.38
+    File::ShareDir: 1.03
     IO::Handle: 1.34
     IPC::Open3: 1.13
     Module::Build: 0.4007
@@ -347,6 +349,14 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::AutoPrereqs
       name: corpus
+      version: 4.300037
+    -
+      class: Dist::Zilla::Plugin::Prereqs
+      config:
+        Dist::Zilla::Plugin::Prereqs:
+          phase: test
+          type: requires
+      name: TestRequires
       version: 4.300037
     -
       class: Dist::Zilla::Plugin::FinderCode
