--- a/META.yml
+++ b/META.yml
@@ -26,7 +26,8 @@ provides:
 requires:
   Cwd: 0
   Dist::Zilla::Role::Plugin: 0
-  Moo: 1.000008
+  Moose: 0
+  MooseX::AttributeShortcuts: 0
   Path::Tiny: 0
   Test::File::ShareDir::TempDirObject: 0
   lib: 0
@@ -49,7 +50,8 @@ x_BuiltWith:
     IO::Handle: 1.34
     IPC::Open3: 1.13
     Module::Build: 0.4007
-    Moo: 1.003
+    Moose: 2.1005
+    MooseX::AttributeShortcuts: 0.020
     Path::FindDev: 0.2.0
     Path::Tiny: 0.031
     Pod::Coverage::TrustPod: 0.100002
