Build results of c7ed7a2 (on master)

--- a/META.yml
+++ b/META.yml
@@ -3,12 +3,14 @@ abstract: 'Use a C<share> directory on your dist during bootstrap'
 author:
   - 'Kent Fredric <kentfredric@gmail.com>'
 build_requires:
+  Cwd: 0
   File::Copy::Recursive: 0
   File::ShareDir: 0
   IO::Handle: 0
   IPC::Open3: 0
   Module::Build: 0.4007
   Path::FindDev: 0
+  Path::Tiny: 0
   Test::More: 0.98
 configure_requires:
   Module::Build: 0.4007
@@ -22,13 +24,11 @@ name: Dist-Zilla-Plugin-Bootstrap-ShareDir-Dist
 provides:
   Dist::Zilla::Plugin::Bootstrap::ShareDir::Dist:
     file: lib/Dist/Zilla/Plugin/Bootstrap/ShareDir/Dist.pm
-    version: v0.1.0
+    version: v0.2.0
 requires:
-  Cwd: 0
-  Dist::Zilla::Role::Plugin: 0
+  Dist::Zilla::Role::Bootstrap: 0
   Moose: 0
   MooseX::AttributeShortcuts: 0
-  Path::Tiny: 0
   Test::File::ShareDir::TempDirObject: 0
   lib: 0
   perl: v5.10.0
@@ -38,13 +38,13 @@ resources:
   bugtracker: https://github.com/kentfredric/Dist-Zilla-Plugin-Bootstrap-ShareDir-Dist/issues
   homepage: https://github.com/kentfredric/Dist-Zilla-Plugin-Bootstrap-ShareDir-Dist
   repository: https://github.com/kentfredric/Dist-Zilla-Plugin-Bootstrap-ShareDir-Dist.git
-version: 0.1.0
+version: 0.2.0
 x_BuiltWith:
   modules:
     Cwd: 3.40
     Dist::Zilla::PluginBundle::Author::KENTNL: 1.8.3
     Dist::Zilla::PluginBundle::Author::KENTNL::Lite: 'NA(possibly not installed)'
-    Dist::Zilla::Role::Plugin: 4.300037
+    Dist::Zilla::Role::Bootstrap: 0.1.0
     File::Copy::Recursive: 0.38
     File::ShareDir: 1.03
     IO::Handle: 1.34
@@ -58,14 +58,14 @@ x_BuiltWith:
     Test::CPAN::Changes: 0.23
     Test::CPAN::Meta: 0.23
     Test::File::ShareDir::TempDirObject: 0.3.3
-    Test::Kwalitee: 1.13
+    Test::Kwalitee: 1.14
     Test::More: 0.98
     Test::Pod: 1.48
     Test::Pod::Coverage: 1.08
     lib: 0.63
     perl: 'NA(skipped: perl)'
     strict: 1.07
-    version: 0.9903
+    version: 0.9904
     warnings: 1.18
   perl:
     original: v5.18.0
@@ -97,10 +97,12 @@ x_Dist_Zilla:
       config:
         Dist::Zilla::Plugin::Bootstrap::ShareDir::Dist:
           dir: share
+        Dist::Zilla::Role::Bootstrap:
+          distname: Dist-Zilla-Plugin-Bootstrap-ShareDir-Dist
           fallback: 1
           try_built: 1
       name: Bootstrap::ShareDir::Dist
-      version: 0.1.0
+      version: 0.2.0
     -
       class: Dist::Zilla::Plugin::Git::NextVersion
       name: '@Author::KENTNL/Git::NextVersion'
@@ -112,7 +114,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::GithubMeta
       name: '@Author::KENTNL/GithubMeta'
-      version: 0.32
+      version: 0.34
     -
       class: Dist::Zilla::Plugin::MetaProvides::Package
       name: '@Author::KENTNL/MetaProvides::Package'
@@ -191,7 +193,7 @@ x_Dist_Zilla:
           script_finder:
             - ':ExecFiles'
       name: '@Author::KENTNL/Test::Compile'
-      version: 2.023
+      version: 2.025
     -
       class: Dist::Zilla::Plugin::Test::Perl::Critic
       name: '@Author::KENTNL/Test::Perl::Critic'
@@ -343,7 +345,7 @@ x_Dist_Zilla:
             - Test::More
             - Dist::Zilla::PluginBundle::Author::KENTNL
       name: '@Author::KENTNL/Prereqs::MatchInstalled'
-      version: 0.1.1
+      version: 0.1.2
     -
       class: Dist::Zilla::Plugin::FileFinder::ByName
       name: corpusfiles
