--- a/corpus/fake_dist_04/dist.ini
+++ b/corpus/fake_dist_04/dist.ini
@@ -6,11 +6,11 @@ copyright_holder = Kent Fredric
 
 [Bootstrap::lib]
 try_built = 1
-no_fallback = 1
+fallback = 0
 
 [Bootstrap::ShareDir::Dist]
 try_built = 1
-no_fallback = 1
+fallback = 0
 
 
 [MetaConfig]
