--- a/META.yml
+++ b/META.yml
@@ -4,7 +4,7 @@ author:
   - 'Kent Fredric <kentfredric@gmail.com>'
 build_requires:
   Cwd: 0
-  Dist::Zilla::Plugin::Bootstrap::lib: 0
+  Dist::Zilla::Plugin::Bootstrap::lib: 0.04000000
   File::Copy::Recursive: 0
   File::ShareDir: 0
   IO::Handle: 0
@@ -60,7 +60,7 @@ x_BuiltWith:
     Test::CPAN::Changes: 0.23
     Test::CPAN::Meta: 0.23
     Test::File::ShareDir::TempDirObject: 0.3.3
-    Test::Kwalitee: 'NA(possibly not installed)'
+    Test::Kwalitee: 1.14
     Test::More: 0.98
     Test::Pod: 1.48
     Test::Pod::Coverage: 1.08
