--- a/dist.ini
+++ b/dist.ini
@@ -6,6 +6,7 @@ copyright_holder = Kent Fredric <kentfredric@gmail.com>
 
 ; Uncomment this to bootstrap via self 
 [Bootstrap::lib]
+:version = 0.04000000
 try_built = 1
 
 [Bootstrap::ShareDir::Dist]
@@ -34,4 +35,4 @@ test_filder = corpusfiles
 
 [Prereqs / TestRequires]
 File::ShareDir = 0
-Dist::Zilla::Plugin::Bootstrap::lib = 0
+Dist::Zilla::Plugin::Bootstrap::lib = 0.04000000
