--- a/META.yml
+++ b/META.yml
@@ -4,6 +4,7 @@ author:
   - 'Kent Fredric <kentfredric@gmail.com>'
 build_requires:
   Cwd: 0
+  Dist::Zilla::Plugin::Bootstrap::lib: 0.04000000
   File::Copy::Recursive: 0
   File::ShareDir: 0
   IO::Handle: 0
@@ -24,7 +25,7 @@ name: Dist-Zilla-Plugin-Bootstrap-ShareDir-Dist
 provides:
   Dist::Zilla::Plugin::Bootstrap::ShareDir::Dist:
     file: lib/Dist/Zilla/Plugin/Bootstrap/ShareDir/Dist.pm
-    version: v0.2.1
+    version: v0.2.2
 requires:
   Dist::Zilla::Role::Bootstrap: 0
   Moose: 0
@@ -38,22 +39,23 @@ resources:
   bugtracker: https://github.com/kentfredric/Dist-Zilla-Plugin-Bootstrap-ShareDir-Dist/issues
   homepage: https://github.com/kentfredric/Dist-Zilla-Plugin-Bootstrap-ShareDir-Dist
   repository: https://github.com/kentfredric/Dist-Zilla-Plugin-Bootstrap-ShareDir-Dist.git
-version: 0.2.1
+version: 0.2.2
 x_BuiltWith:
   modules:
-    Cwd: 3.40
+    Cwd: 3.44
+    Dist::Zilla::Plugin::Bootstrap::lib: 0.04000000
     Dist::Zilla::PluginBundle::Author::KENTNL: 1.8.3
     Dist::Zilla::PluginBundle::Author::KENTNL::Lite: 'NA(possibly not installed)'
     Dist::Zilla::Role::Bootstrap: 0.1.0
     File::Copy::Recursive: 0.38
     File::ShareDir: 1.03
-    IO::Handle: 1.34
-    IPC::Open3: 1.13
+    IO::Handle: 1.35
+    IPC::Open3: 1.15
     Module::Build: 0.4007
     Moose: 2.1005
     MooseX::AttributeShortcuts: 0.020
     Path::FindDev: 0.2.0
-    Path::Tiny: 0.031
+    Path::Tiny: 0.032
     Pod::Coverage::TrustPod: 0.100002
     Test::CPAN::Changes: 0.23
     Test::CPAN::Meta: 0.23
@@ -64,16 +66,16 @@ x_BuiltWith:
     Test::Pod::Coverage: 1.08
     lib: 0.63
     perl: 'NA(skipped: perl)'
-    strict: 1.07
+    strict: 1.08
     version: 0.9904
     warnings: 1.18
   perl:
-    original: v5.18.0
+    original: v5.19.3
     qv: 1
     version:
       - 5
-      - 18
-      - 0
+      - 19
+      - 3
   perl-config:
     gccversion: 4.7.2
     myarchname: x86_64-linux
@@ -82,16 +84,17 @@ x_BuiltWith:
   uname: 'Linux 3.10.9-gentoo x86_64 GenuineIntel GNU/Linux'
 x_Dist_Zilla:
   perl:
-    version: 5.018000
+    version: 5.019003
   plugins:
     -
       class: Dist::Zilla::Plugin::Bootstrap::lib
       config:
-        Dist::Zilla::Plugin::Bootstrap::lib:
+        Dist::Zilla::Role::Bootstrap:
+          distname: Dist-Zilla-Plugin-Bootstrap-ShareDir-Dist
           fallback: 1
           try_built: 1
       name: Bootstrap::lib
-      version: 0.03000200
+      version: 0.04000000
     -
       class: Dist::Zilla::Plugin::Bootstrap::ShareDir::Dist
       config:
@@ -102,7 +105,7 @@ x_Dist_Zilla:
           fallback: 1
           try_built: 1
       name: Bootstrap::ShareDir::Dist
-      version: 0.2.1
+      version: 0.2.2
     -
       class: Dist::Zilla::Plugin::Git::NextVersion
       name: '@Author::KENTNL/Git::NextVersion'
@@ -114,7 +117,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::GithubMeta
       name: '@Author::KENTNL/GithubMeta'
-      version: 0.34
+      version: 0.36
     -
       class: Dist::Zilla::Plugin::MetaProvides::Package
       name: '@Author::KENTNL/MetaProvides::Package'
@@ -193,7 +196,7 @@ x_Dist_Zilla:
           script_finder:
             - ':ExecFiles'
       name: '@Author::KENTNL/Test::Compile'
-      version: 2.025
+      version: 2.026
     -
       class: Dist::Zilla::Plugin::Test::Perl::Critic
       name: '@Author::KENTNL/Test::Perl::Critic'
@@ -253,7 +256,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::Authority
       name: '@Author::KENTNL/Authority'
-      version: 1.007
+      version: 1.006
     -
       class: Dist::Zilla::Plugin::ModuleBuild
       name: '@Author::KENTNL/ModuleBuild'
