--- a/corpus/fake_dist_05/dist.ini
+++ b/corpus/fake_dist_05/dist.ini
@@ -5,12 +5,13 @@ license = Perl_5
 copyright_holder = Kent Fredric
 
 [Bootstrap::lib]
+:version = 0.04000000
 try_built = 1
-no_fallback = 1
+fallback = 0
 
 [Bootstrap::ShareDir::Dist]
 try_built = 1
-no_fallback = 1
+fallback = 0
 
 
 [MetaConfig]
