--- a/META.yml
+++ b/META.yml
@@ -13,11 +13,13 @@ build_requires:
   Module::Build: 0.4007
   Path::FindDev: 0
   Path::Tiny: 0
+  Test::DZil: 0
+  Test::Fatal: 0
   Test::More: 0.98
 configure_requires:
   Module::Build: 0.4007
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300039, CPAN::Meta::Converter version 2.132620'
+generated_by: 'Dist::Zilla version 4.300039, CPAN::Meta::Converter version 2.132661'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -44,10 +46,10 @@ version: 0.2.3
 x_BuiltWith:
   modules:
     Cwd: 3.44
-    Dist::Zilla::Plugin::Bootstrap::lib: 0.04000000
+    Dist::Zilla::Plugin::Bootstrap::lib: 0.04000001
     Dist::Zilla::PluginBundle::Author::KENTNL: 1.8.3
     Dist::Zilla::PluginBundle::Author::KENTNL::Lite: 1.7.2
-    Dist::Zilla::Role::Bootstrap: 0.2.0
+    Dist::Zilla::Role::Bootstrap: 0.2.1
     File::Copy::Recursive: 0.38
     File::ShareDir: 1.03
     File::Spec: 3.44
@@ -57,10 +59,12 @@ x_BuiltWith:
     Moose: 2.1005
     MooseX::AttributeShortcuts: 0.021
     Path::FindDev: 0.3.1
-    Path::Tiny: 0.033
+    Path::Tiny: 0.035
     Pod::Coverage::TrustPod: 0.100002
     Test::CPAN::Changes: 0.23
     Test::CPAN::Meta: 0.23
+    Test::DZil: 4.300039
+    Test::Fatal: 0.013
     Test::File::ShareDir::TempDirObject: 0.3.3
     Test::Kwalitee: 1.14
     Test::More: 0.98
@@ -83,7 +87,7 @@ x_BuiltWith:
     myarchname: x86_64-linux
     osname: linux
   platform: linux
-  uname: 'Linux 3.11.0-gentoo x86_64 GenuineIntel GNU/Linux'
+  uname: 'Linux 3.11.1-gentoo x86_64 GenuineIntel GNU/Linux'
 x_Dist_Zilla:
   perl:
     version: 5.019003
@@ -97,7 +101,7 @@ x_Dist_Zilla:
           try_built: 1
           try_built_method: mtime
       name: Bootstrap::lib
-      version: 0.04000000
+      version: 0.04000001
     -
       class: Dist::Zilla::Plugin::Bootstrap::ShareDir::Dist
       config:
@@ -109,7 +113,7 @@ x_Dist_Zilla:
           try_built: 1
           try_built_method: mtime
       name: Bootstrap::ShareDir::Dist
-      version: 0.2.2
+      version: ~
     -
       class: Dist::Zilla::Plugin::Git::NextVersion
       name: '@Author::KENTNL/Git::NextVersion'
