--- a/META.yml
+++ b/META.yml
@@ -7,16 +7,19 @@ build_requires:
   Dist::Zilla::Plugin::Bootstrap::lib: 0.04000000
   File::Copy::Recursive: 0
   File::ShareDir: 0
+  File::Spec: 0
   IO::Handle: 0
   IPC::Open3: 0
   Module::Build: 0.4007
   Path::FindDev: 0
   Path::Tiny: 0
+  Test::DZil: 0
+  Test::Fatal: 0
   Test::More: 0.98
 configure_requires:
   Module::Build: 0.4007
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300037, CPAN::Meta::Converter version 2.132140'
+generated_by: 'Dist::Zilla version 4.300039, CPAN::Meta::Converter version 2.132661'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -25,7 +28,7 @@ name: Dist-Zilla-Plugin-Bootstrap-ShareDir-Dist
 provides:
   Dist::Zilla::Plugin::Bootstrap::ShareDir::Dist:
     file: lib/Dist/Zilla/Plugin/Bootstrap/ShareDir/Dist.pm
-    version: v0.2.2
+    version: v0.2.3
 requires:
   Dist::Zilla::Role::Bootstrap: 0
   Moose: 0
@@ -39,26 +42,29 @@ resources:
   bugtracker: https://github.com/kentfredric/Dist-Zilla-Plugin-Bootstrap-ShareDir-Dist/issues
   homepage: https://github.com/kentfredric/Dist-Zilla-Plugin-Bootstrap-ShareDir-Dist
   repository: https://github.com/kentfredric/Dist-Zilla-Plugin-Bootstrap-ShareDir-Dist.git
-version: 0.2.2
+version: 0.2.3
 x_BuiltWith:
   modules:
     Cwd: 3.44
-    Dist::Zilla::Plugin::Bootstrap::lib: 0.04000000
+    Dist::Zilla::Plugin::Bootstrap::lib: 0.04000001
     Dist::Zilla::PluginBundle::Author::KENTNL: 1.8.3
-    Dist::Zilla::PluginBundle::Author::KENTNL::Lite: 'NA(possibly not installed)'
-    Dist::Zilla::Role::Bootstrap: 0.1.0
+    Dist::Zilla::PluginBundle::Author::KENTNL::Lite: 1.7.2
+    Dist::Zilla::Role::Bootstrap: 0.2.1
     File::Copy::Recursive: 0.38
     File::ShareDir: 1.03
+    File::Spec: 3.44
     IO::Handle: 1.35
     IPC::Open3: 1.15
     Module::Build: 0.4007
     Moose: 2.1005
-    MooseX::AttributeShortcuts: 0.020
-    Path::FindDev: 0.2.0
-    Path::Tiny: 0.032
+    MooseX::AttributeShortcuts: 0.021
+    Path::FindDev: 0.3.1
+    Path::Tiny: 0.035
     Pod::Coverage::TrustPod: 0.100002
     Test::CPAN::Changes: 0.23
     Test::CPAN::Meta: 0.23
+    Test::DZil: 4.300039
+    Test::Fatal: 0.013
     Test::File::ShareDir::TempDirObject: 0.3.3
     Test::Kwalitee: 1.14
     Test::More: 0.98
@@ -81,7 +87,7 @@ x_BuiltWith:
     myarchname: x86_64-linux
     osname: linux
   platform: linux
-  uname: 'Linux 3.10.9-gentoo x86_64 GenuineIntel GNU/Linux'
+  uname: 'Linux 3.11.1-gentoo x86_64 GenuineIntel GNU/Linux'
 x_Dist_Zilla:
   perl:
     version: 5.019003
@@ -93,8 +99,9 @@ x_Dist_Zilla:
           distname: Dist-Zilla-Plugin-Bootstrap-ShareDir-Dist
           fallback: 1
           try_built: 1
+          try_built_method: mtime
       name: Bootstrap::lib
-      version: 0.04000000
+      version: 0.04000001
     -
       class: Dist::Zilla::Plugin::Bootstrap::ShareDir::Dist
       config:
@@ -104,8 +111,9 @@ x_Dist_Zilla:
           distname: Dist-Zilla-Plugin-Bootstrap-ShareDir-Dist
           fallback: 1
           try_built: 1
+          try_built_method: mtime
       name: Bootstrap::ShareDir::Dist
-      version: 0.2.2
+      version: 0.2.3
     -
       class: Dist::Zilla::Plugin::Git::NextVersion
       name: '@Author::KENTNL/Git::NextVersion'
@@ -113,15 +121,25 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::MetaConfig
       name: '@Author::KENTNL/MetaConfig'
-      version: 4.300037
+      version: 4.300039
     -
       class: Dist::Zilla::Plugin::GithubMeta
       name: '@Author::KENTNL/GithubMeta'
-      version: 0.36
+      version: 0.38
+    -
+      class: Dist::Zilla::Plugin::FinderCode
+      name: '@Author::KENTNL/MetaProvides::Package/AUTOVIV/:InstallModulesPM'
+      version: 4.300039
     -
       class: Dist::Zilla::Plugin::MetaProvides::Package
+      config:
+        Dist::Zilla::Plugin::MetaProvides::Package: {}
+        Dist::Zilla::Role::MetaProvider::Provider:
+          inherit_missing: 1
+          inherit_version: 1
+          meta_noindex: 1
       name: '@Author::KENTNL/MetaProvides::Package'
-      version: 1.14000003
+      version: 1.15000000
     -
       class: Dist::Zilla::Plugin::MetaData::BuiltWith
       config:
@@ -146,31 +164,31 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::License
       name: '@Author::KENTNL/License'
-      version: 4.300037
+      version: 4.300039
     -
       class: Dist::Zilla::Plugin::MetaJSON
       name: '@Author::KENTNL/MetaJSON'
-      version: 4.300037
+      version: 4.300039
     -
       class: Dist::Zilla::Plugin::MetaYAML
       name: '@Author::KENTNL/MetaYAML'
-      version: 4.300037
+      version: 4.300039
     -
       class: Dist::Zilla::Plugin::Manifest
       name: '@Author::KENTNL/Manifest'
-      version: 4.300037
+      version: 4.300039
     -
       class: Dist::Zilla::Plugin::MetaTests
       name: '@Author::KENTNL/MetaTests'
-      version: 4.300037
+      version: 4.300039
     -
       class: Dist::Zilla::Plugin::PodCoverageTests
       name: '@Author::KENTNL/PodCoverageTests'
-      version: 4.300037
+      version: 4.300039
     -
       class: Dist::Zilla::Plugin::PodSyntaxTests
       name: '@Author::KENTNL/PodSyntaxTests'
-      version: 4.300037
+      version: 4.300039
     -
       class: Dist::Zilla::Plugin::ReportVersions::Tiny
       name: '@Author::KENTNL/ReportVersions::Tiny'
@@ -196,7 +214,7 @@ x_Dist_Zilla:
           script_finder:
             - ':ExecFiles'
       name: '@Author::KENTNL/Test::Compile'
-      version: 2.026
+      version: 2.033
     -
       class: Dist::Zilla::Plugin::Test::Perl::Critic
       name: '@Author::KENTNL/Test::Perl::Critic'
@@ -204,15 +222,15 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::PruneCruft
       name: '@Author::KENTNL/PruneCruft'
-      version: 4.300037
+      version: 4.300039
     -
       class: Dist::Zilla::Plugin::ManifestSkip
       name: '@Author::KENTNL/ManifestSkip'
-      version: 4.300037
+      version: 4.300039
     -
       class: Dist::Zilla::Plugin::PkgVersion
       name: '@Author::KENTNL/PkgVersion'
-      version: 4.300037
+      version: 4.300039
     -
       class: Dist::Zilla::Plugin::PodWeaver
       name: '@Author::KENTNL/PodWeaver'
@@ -220,11 +238,11 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::NextRelease
       name: '@Author::KENTNL/NextRelease'
-      version: 4.300037
+      version: 4.300039
     -
       class: Dist::Zilla::Plugin::AutoPrereqs
       name: '@Author::KENTNL/AutoPrereqs'
-      version: 4.300037
+      version: 4.300039
     -
       class: Dist::Zilla::Plugin::Prereqs
       config:
@@ -232,7 +250,7 @@ x_Dist_Zilla:
           phase: develop
           type: requires
       name: '@Author::KENTNL/Prereqs/BundleDevelNeeds'
-      version: 4.300037
+      version: 4.300039
     -
       class: Dist::Zilla::Plugin::Prereqs
       config:
@@ -240,7 +258,7 @@ x_Dist_Zilla:
           phase: develop
           type: recommends
       name: '@Author::KENTNL/Prereqs/BundleDevelRecommends'
-      version: 4.300037
+      version: 4.300039
     -
       class: Dist::Zilla::Plugin::Prereqs
       config:
@@ -248,7 +266,7 @@ x_Dist_Zilla:
           phase: develop
           type: suggests
       name: '@Author::KENTNL/Prereqs/BundleDevelSuggests'
-      version: 4.300037
+      version: 4.300039
     -
       class: Dist::Zilla::Plugin::Author::KENTNL::MinimumPerl
       name: '@Author::KENTNL/Author::KENTNL::MinimumPerl'
@@ -260,7 +278,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::ModuleBuild
       name: '@Author::KENTNL/ModuleBuild'
-      version: 4.300037
+      version: 4.300039
     -
       class: Dist::Zilla::Plugin::ReadmeFromPod
       name: '@Author::KENTNL/ReadmeFromPod'
@@ -280,11 +298,11 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::TestRelease
       name: '@Author::KENTNL/TestRelease'
-      version: 4.300037
+      version: 4.300039
     -
       class: Dist::Zilla::Plugin::ConfirmRelease
       name: '@Author::KENTNL/ConfirmRelease'
-      version: 4.300037
+      version: 4.300039
     -
       class: Dist::Zilla::Plugin::Git::Check
       name: '@Author::KENTNL/Git::Check'
@@ -308,7 +326,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::UploadToCPAN
       name: '@Author::KENTNL/UploadToCPAN'
-      version: 4.300037
+      version: 4.300039
     -
       class: Dist::Zilla::Plugin::Twitter
       name: '@Author::KENTNL/Twitter'
@@ -352,11 +370,11 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::FileFinder::ByName
       name: corpusfiles
-      version: 4.300037
+      version: 4.300039
     -
       class: Dist::Zilla::Plugin::AutoPrereqs
       name: corpus
-      version: 4.300037
+      version: 4.300039
     -
       class: Dist::Zilla::Plugin::Prereqs
       config:
@@ -364,34 +382,34 @@ x_Dist_Zilla:
           phase: test
           type: requires
       name: TestRequires
-      version: 4.300037
+      version: 4.300039
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':InstallModules'
-      version: 4.300037
+      version: 4.300039
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':IncModules'
-      version: 4.300037
+      version: 4.300039
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':TestFiles'
-      version: 4.300037
+      version: 4.300039
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ExecFiles'
-      version: 4.300037
+      version: 4.300039
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ShareFiles'
-      version: 4.300037
+      version: 4.300039
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':MainModule'
-      version: 4.300037
+      version: 4.300039
   zilla:
     class: Dist::Zilla::Dist::Builder
     config:
       is_trial: 0
-    version: 4.300037
+    version: 4.300039
 x_authority: cpan:KENTNL
