don't include corpus when indexing

--- a/dist.ini
+++ b/dist.ini
@@ -36,3 +36,6 @@ test_filder = corpusfiles
 [Prereqs / TestRequires]
 File::ShareDir = 0
 Dist::Zilla::Plugin::Bootstrap::lib = 0.04000000
+
+[MetaNoIndex]
+directory = corpus
