Remove implicit dependencies on 5.10

--- a/dist.ini
+++ b/dist.ini
@@ -15,6 +15,7 @@ try_built = 1
 [@Author::KENTNL]
 :version          = 1.2.0
 git_versions      = 1
+no_fiveten        = 1
 ; version_major     = 0
 ; version_minor     = 1
 ; the following data denotes when this minor was minted
