--- a/dist.ini
+++ b/dist.ini
@@ -15,7 +15,9 @@ try_built = 1
 [@Author::KENTNL]
 :version          = 1.2.0
 git_versions      = 1
-no_fiveten        = 1
+twitter_hash_tags = #perl #cpan
+normal_form = normal_3
+
 ; version_major     = 0
 ; version_minor     = 1
 ; the following data denotes when this minor was minted
@@ -24,7 +26,6 @@ no_fiveten        = 1
 ; version_rel_day   = 3
 ; version_rel_hour  = 13
 ; version_rel_time_zone = Pacific/Auckland
-twitter_hash_tags = #perl #cpan
 ; auto_prereqs_skip = File::Find
 
 [FileFinder::ByName / corpusfiles]
