--- a/META.yml
+++ b/META.yml
@@ -33,8 +33,9 @@ requires:
   MooseX::AttributeShortcuts: '0'
   Test::File::ShareDir::Object::Dist: '0'
   lib: '0'
-  perl: '5.006'
+  perl: '5.008'
   strict: '0'
+  utf8: '0'
   warnings: '0'
 resources:
   bugtracker: https://github.com/kentnl/Dist-Zilla-Plugin-Bootstrap-ShareDir-Dist/issues
@@ -110,6 +111,7 @@ x_BuiltWith:
     Test::Pod::Coverage: '1.10'
     lib: '0.63'
     strict: '1.08'
+    utf8: '1.14'
     warnings: '1.24'
   perl:
     original: v5.21.1
