--- a/META.yml
+++ b/META.yml
@@ -52,6 +52,7 @@ x_BuiltWith:
     Dist::Zilla::Plugin::Bootstrap::lib: '1.000003'
     Dist::Zilla::Plugin::BumpVersionAfterRelease: '0.002'
     Dist::Zilla::Plugin::ConfirmRelease: '5.020'
+    Dist::Zilla::Plugin::CopyFilesFromBuild: '0.103510'
     Dist::Zilla::Plugin::EOLTests: '0.02'
     Dist::Zilla::Plugin::Git::Check: '2.023'
     Dist::Zilla::Plugin::Git::Commit: '2.023'
@@ -217,6 +218,10 @@ x_Dist_Zilla:
       class: Dist::Zilla::Plugin::Manifest
       name: '@Author::KENTNL/Manifest'
       version: '5.020'
+    -
+      class: Dist::Zilla::Plugin::CopyFilesFromBuild
+      name: '@Author::KENTNL/CopyXBuild'
+      version: '0.103510'
     -
       class: Dist::Zilla::Plugin::MetaTests
       name: '@Author::KENTNL/MetaTests'
