--- a/META.yml
+++ b/META.yml
@@ -24,7 +24,7 @@ name: Dist-Zilla-Plugin-Bootstrap-ShareDir-Dist
 provides:
   Dist::Zilla::Plugin::Bootstrap::ShareDir::Dist:
     file: lib/Dist/Zilla/Plugin/Bootstrap/ShareDir/Dist.pm
-    version: '1.000001'
+    version: '1.000002'
 requires:
   Dist::Zilla::Role::Bootstrap: '0'
   Moose: '0'
@@ -39,14 +39,14 @@ resources:
   bugtracker: https://github.com/kentnl/Dist-Zilla-Plugin-Bootstrap-ShareDir-Dist/issues
   homepage: https://github.com/kentnl/Dist-Zilla-Plugin-Bootstrap-ShareDir-Dist
   repository: https://github.com/kentnl/Dist-Zilla-Plugin-Bootstrap-ShareDir-Dist.git
-version: '1.000001'
+version: '1.000002'
 x_BuiltWith:
   modules:
     CPAN::Meta: '2.142060'
     Dist::Zilla::App::Command::bakeini: '0.001001'
     Dist::Zilla::Plugin::Authority: '1.006'
     Dist::Zilla::Plugin::AutoPrereqs: '5.020'
-    Dist::Zilla::Plugin::Bootstrap::lib: '1.000003'
+    Dist::Zilla::Plugin::Bootstrap::lib: '1.000004'
     Dist::Zilla::Plugin::BumpVersionAfterRelease: '0.002'
     Dist::Zilla::Plugin::ConfirmRelease: '5.020'
     Dist::Zilla::Plugin::CopyFilesFromBuild: '0.103510'
@@ -54,6 +54,7 @@ x_BuiltWith:
     Dist::Zilla::Plugin::Git::Check: '2.023'
     Dist::Zilla::Plugin::Git::Commit: '2.023'
     Dist::Zilla::Plugin::Git::CommitBuild: '2.023'
+    Dist::Zilla::Plugin::Git::Contributors: '0.006'
     Dist::Zilla::Plugin::Git::GatherDir: '2.023'
     Dist::Zilla::Plugin::Git::NextRelease: '0.002011'
     Dist::Zilla::Plugin::Git::Tag: '2.023'
@@ -74,28 +75,28 @@ x_BuiltWith:
     Dist::Zilla::Plugin::PodWeaver: '4.005'
     Dist::Zilla::Plugin::Prereqs: '5.020'
     Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled: '0.002000'
-    Dist::Zilla::Plugin::ReadmeAnyFromPod: '0.141760'
+    Dist::Zilla::Plugin::ReadmeAnyFromPod: '0.142250'
     Dist::Zilla::Plugin::ReadmeFromPod: '0.21'
-    Dist::Zilla::Plugin::RewriteVersion::Sanitized: '0.001001'
+    Dist::Zilla::Plugin::RewriteVersion::Sanitized: '0.001002'
     Dist::Zilla::Plugin::RunExtraTests: '0.022'
     Dist::Zilla::Plugin::Test::CPAN::Changes: '0.008'
     Dist::Zilla::Plugin::Test::Compile::PerFile: '0.002001'
     Dist::Zilla::Plugin::Test::Kwalitee: '2.07'
     Dist::Zilla::Plugin::Test::MinimumVersion: '2.000005'
     Dist::Zilla::Plugin::Test::Perl::Critic: '2.112410'
-    Dist::Zilla::Plugin::Test::ReportPrereqs: '0.018'
+    Dist::Zilla::Plugin::Test::ReportPrereqs: '0.019'
     Dist::Zilla::Plugin::TestRelease: '5.020'
     Dist::Zilla::Plugin::Twitter: '0.025'
     Dist::Zilla::Plugin::UploadToCPAN: '5.020'
-    Dist::Zilla::PluginBundle::Author::KENTNL: '2.016007'
+    Dist::Zilla::PluginBundle::Author::KENTNL: '2.017002'
     Dist::Zilla::Role::Bootstrap: '1.000002'
     ExtUtils::MakeMaker: '6.98'
     File::Copy::Recursive: '0.38'
     File::ShareDir: '1.102'
     File::Spec: '3.48'
-    Moose: '2.1210'
+    Moose: '2.1211'
     MooseX::AttributeShortcuts: '0.024'
-    Path::Tiny: '0.055'
+    Path::Tiny: '0.056'
     Pod::Coverage::TrustPod: '0.100003'
     Test::CPAN::Changes: '0.30'
     Test::CPAN::Meta: '0.23'
@@ -136,7 +137,7 @@ x_Dist_Zilla:
           try_built: '1'
           try_built_method: mtime
       name: Bootstrap::lib
-      version: '1.000003'
+      version: '1.000004'
     -
       class: Dist::Zilla::Plugin::Bootstrap::ShareDir::Dist
       config:
@@ -148,7 +149,7 @@ x_Dist_Zilla:
           try_built: '1'
           try_built_method: mtime
       name: Bootstrap::ShareDir::Dist
-      version: '1.000001'
+      version: '1.000002'
     -
       class: Dist::Zilla::Plugin::MetaConfig
       name: '@Author::KENTNL/MetaConfig'
@@ -189,6 +190,15 @@ x_Dist_Zilla:
             uname_call: uname
       name: '@Author::KENTNL/MetaData::BuiltWith'
       version: '1.001000'
+    -
+      class: Dist::Zilla::Plugin::Git::Contributors
+      config:
+        Dist::Zilla::Plugin::Git::Contributors:
+          include_authors: '0'
+          include_releaser: '0'
+          order_by: name
+      name: '@Author::KENTNL/Git::Contributors'
+      version: '0.006'
     -
       class: Dist::Zilla::Plugin::Git::GatherDir
       config:
@@ -233,7 +243,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::Test::ReportPrereqs
       name: '@Author::KENTNL/Test::ReportPrereqs'
-      version: '0.018'
+      version: '0.019'
     -
       class: Dist::Zilla::Plugin::Test::Kwalitee
       name: '@Author::KENTNL/Test::Kwalitee'
@@ -278,7 +288,7 @@ x_Dist_Zilla:
           mantissa: '6'
           normal_form: numify
       name: '@Author::KENTNL/RewriteVersion::Sanitized'
-      version: '0.001001'
+      version: '0.001002'
     -
       class: Dist::Zilla::Plugin::PodWeaver
       config:
@@ -391,7 +401,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::ReadmeAnyFromPod
       name: '@Author::KENTNL/ReadmeAnyFromPod'
-      version: '0.141760'
+      version: '0.142250'
     -
       class: Dist::Zilla::Plugin::Test::CPAN::Changes
       name: '@Author::KENTNL/Test::CPAN::Changes'
@@ -449,7 +459,7 @@ x_Dist_Zilla:
         Dist::Zilla::Plugin::Git::Tag:
           branch: ~
           signed: '0'
-          tag: 1.000001-source
+          tag: 1.000002-source
           tag_format: '%v-source'
           tag_message: v%v
           time_zone: local
@@ -503,7 +513,7 @@ x_Dist_Zilla:
         Dist::Zilla::Plugin::Git::Tag:
           branch: releases
           signed: '0'
-          tag: '1.000001'
+          tag: '1.000002'
           tag_format: '%v'
           tag_message: v%v
           time_zone: local
