--- a/META.yml
+++ b/META.yml
@@ -149,7 +149,7 @@ x_Dist_Zilla:
           fallback: '1'
           try_built: '1'
           try_built_method: mtime
-        HASH(0x5465548): {}
+        HASH(0x4c058c8): {}
       name: Bootstrap::ShareDir::Dist
       version: '1.001000'
     -
