Build results of 6989577 (on master)

--- a/dist.ini
+++ b/dist.ini
@@ -1,7 +1,7 @@
 ; This file is generated from dist.ini.meta by dzil bakeini.
 ; Edit that file or the bundles contained within for long-term changes.
 name = Dist-Zilla-Plugin-Bootstrap-ShareDir-Dist
-author = Kent Fredric <kentfredric@gmail.com>
+author = Kent Fredric <kentnl@cpan.org>
 license = Perl_5
 copyright_holder = Kent Fredric <kentfredric@gmail.com>
 
@@ -83,7 +83,7 @@ replacer = replace_with_blank
 -phase = develop
 -type = suggests
 Dist::Zilla::App::Command::bakeini = 0.001000
-Dist::Zilla::PluginBundle::Author::KENTNL = 2.017002
+Dist::Zilla::PluginBundle::Author::KENTNL = 2.020000
 
 [MinimumPerl / @Author::KENTNL/MinimumPerl]
 
@@ -95,6 +95,9 @@ locate_comment = 1
 
 [MakeMaker / @Author::KENTNL/MakeMaker]
 default_jobs = 10
+
+[Author::KENTNL::RecommendFixes / @Author::KENTNL/Author::KENTNL::RecommendFixes]
+:version = 0.001001
 
 [ReadmeFromPod / @Author::KENTNL/ReadmeFromPod]
 
@@ -156,6 +159,7 @@ modules = Dist::Zilla::App::Command::bakeini
 [Prereqs / @Author::KENTNL/::Role::BundleDeps]
 -phase = develop
 -relationship = requires
+Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes = 0.001001
 Dist::Zilla::Plugin::Authority = 1.006
 Dist::Zilla::Plugin::AutoPrereqs = 0
 Dist::Zilla::Plugin::BumpVersionAfterRelease = 0
@@ -199,14 +203,3 @@ Dist::Zilla::Plugin::Test::ReportPrereqs = 0
 Dist::Zilla::Plugin::TestRelease = 0
 Dist::Zilla::Plugin::Twitter = 0
 Dist::Zilla::Plugin::UploadToCPAN = 0
-
-[FileFinder::ByName / corpusfiles]
-dir = corpus
-match = \.pm$
-
-[AutoPrereqs / corpus]
-test_filder = corpusfiles
-
-[Prereqs / TestRequires]
-File::ShareDir = 0
-Dist::Zilla::Plugin::Bootstrap::lib = 0.04000000
