--- a/META.yml
+++ b/META.yml
@@ -1,16 +1,15 @@
 ---
 abstract: 'Use a share directory on your dist during bootstrap'
 author:
-  - 'Kent Fredric <kentfredric@gmail.com>'
+  - 'Kent Fredric <kentnl@cpan.org>'
 build_requires:
   Dist::Zilla::Plugin::Bootstrap::lib: '0.04000000'
+  Dist::Zilla::Util::Test::KENTNL: '1.003001'
   ExtUtils::MakeMaker: '0'
-  File::Copy::Recursive: '0'
   File::ShareDir: '0'
   File::Spec: '0'
   Path::Tiny: '0'
   Test::DZil: '0'
-  Test::Fatal: '0'
   Test::More: '0.89'
 configure_requires:
   ExtUtils::MakeMaker: '0'
@@ -24,9 +23,10 @@ name: Dist-Zilla-Plugin-Bootstrap-ShareDir-Dist
 provides:
   Dist::Zilla::Plugin::Bootstrap::ShareDir::Dist:
     file: lib/Dist/Zilla/Plugin/Bootstrap/ShareDir/Dist.pm
-    version: '1.000002'
+    version: '1.001000'
 requires:
   Dist::Zilla::Role::Bootstrap: '0'
+  Dist::Zilla::Util::ConfigDumper: '0'
   Moose: '0'
   MooseX::AttributeShortcuts: '0'
   Test::File::ShareDir::Object::Dist: '0'
@@ -39,14 +39,15 @@ resources:
   bugtracker: https://github.com/kentnl/Dist-Zilla-Plugin-Bootstrap-ShareDir-Dist/issues
   homepage: https://github.com/kentnl/Dist-Zilla-Plugin-Bootstrap-ShareDir-Dist
   repository: https://github.com/kentnl/Dist-Zilla-Plugin-Bootstrap-ShareDir-Dist.git
-version: '1.000002'
+version: '1.001000'
 x_BuiltWith:
   modules:
     CPAN::Meta: '2.142060'
-    Dist::Zilla::App::Command::bakeini: '0.001001'
+    Dist::Zilla::App::Command::bakeini: '0.001002'
+    Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes: '0.003001'
     Dist::Zilla::Plugin::Authority: '1.006'
     Dist::Zilla::Plugin::AutoPrereqs: '5.020'
-    Dist::Zilla::Plugin::Bootstrap::lib: '1.000004'
+    Dist::Zilla::Plugin::Bootstrap::lib: '1.000005'
     Dist::Zilla::Plugin::BumpVersionAfterRelease: '0.002'
     Dist::Zilla::Plugin::ConfirmRelease: '5.020'
     Dist::Zilla::Plugin::CopyFilesFromBuild: '0.103510'
@@ -54,9 +55,9 @@ x_BuiltWith:
     Dist::Zilla::Plugin::Git::Check: '2.023'
     Dist::Zilla::Plugin::Git::Commit: '2.023'
     Dist::Zilla::Plugin::Git::CommitBuild: '2.023'
-    Dist::Zilla::Plugin::Git::Contributors: '0.006'
+    Dist::Zilla::Plugin::Git::Contributors: '0.007'
     Dist::Zilla::Plugin::Git::GatherDir: '2.023'
-    Dist::Zilla::Plugin::Git::NextRelease: '0.002011'
+    Dist::Zilla::Plugin::Git::NextRelease: '0.002012'
     Dist::Zilla::Plugin::Git::Tag: '2.023'
     Dist::Zilla::Plugin::GithubMeta: '0.46'
     Dist::Zilla::Plugin::License: '5.020'
@@ -64,36 +65,37 @@ x_BuiltWith:
     Dist::Zilla::Plugin::Manifest: '5.020'
     Dist::Zilla::Plugin::ManifestSkip: '5.020'
     Dist::Zilla::Plugin::MetaConfig: '5.020'
-    Dist::Zilla::Plugin::MetaData::BuiltWith: '1.001000'
+    Dist::Zilla::Plugin::MetaData::BuiltWith: '1.002000'
     Dist::Zilla::Plugin::MetaJSON: '5.020'
-    Dist::Zilla::Plugin::MetaProvides::Package: '2.000003'
+    Dist::Zilla::Plugin::MetaProvides::Package: '2.001001'
     Dist::Zilla::Plugin::MetaTests: '5.020'
     Dist::Zilla::Plugin::MetaYAML: '5.020'
     Dist::Zilla::Plugin::MinimumPerl: '1.003'
     Dist::Zilla::Plugin::PodCoverageTests: '5.020'
     Dist::Zilla::Plugin::PodSyntaxTests: '5.020'
-    Dist::Zilla::Plugin::PodWeaver: '4.005'
+    Dist::Zilla::Plugin::PodWeaver: '4.006'
     Dist::Zilla::Plugin::Prereqs: '5.020'
-    Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled: '0.002000'
+    Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled: '0.002001'
     Dist::Zilla::Plugin::ReadmeAnyFromPod: '0.142250'
     Dist::Zilla::Plugin::ReadmeFromPod: '0.21'
-    Dist::Zilla::Plugin::RewriteVersion::Sanitized: '0.001002'
+    Dist::Zilla::Plugin::RewriteVersion::Sanitized: '0.001003'
     Dist::Zilla::Plugin::RunExtraTests: '0.022'
     Dist::Zilla::Plugin::Test::CPAN::Changes: '0.008'
-    Dist::Zilla::Plugin::Test::Compile::PerFile: '0.002001'
-    Dist::Zilla::Plugin::Test::Kwalitee: '2.07'
+    Dist::Zilla::Plugin::Test::Compile::PerFile: '0.002002'
+    Dist::Zilla::Plugin::Test::Kwalitee: '2.11'
     Dist::Zilla::Plugin::Test::MinimumVersion: '2.000005'
     Dist::Zilla::Plugin::Test::Perl::Critic: '2.112410'
     Dist::Zilla::Plugin::Test::ReportPrereqs: '0.019'
     Dist::Zilla::Plugin::TestRelease: '5.020'
     Dist::Zilla::Plugin::Twitter: '0.025'
     Dist::Zilla::Plugin::UploadToCPAN: '5.020'
-    Dist::Zilla::PluginBundle::Author::KENTNL: '2.017002'
-    Dist::Zilla::Role::Bootstrap: '1.000002'
+    Dist::Zilla::PluginBundle::Author::KENTNL: '2.020000'
+    Dist::Zilla::Role::Bootstrap: '1.000003'
+    Dist::Zilla::Util::ConfigDumper: '0.003002'
+    Dist::Zilla::Util::Test::KENTNL: '1.003001'
     ExtUtils::MakeMaker: '6.98'
-    File::Copy::Recursive: '0.38'
     File::ShareDir: '1.102'
-    File::Spec: '3.48'
+    File::Spec: '3.49'
     Moose: '2.1211'
     MooseX::AttributeShortcuts: '0.024'
     Path::Tiny: '0.056'
@@ -101,32 +103,33 @@ x_BuiltWith:
     Test::CPAN::Changes: '0.30'
     Test::CPAN::Meta: '0.23'
     Test::DZil: '5.020'
-    Test::Fatal: '0.013'
-    Test::File::ShareDir::Object::Dist: '1.000004'
-    Test::Kwalitee: '1.19'
+    Test::File::ShareDir::Object::Dist: '1.000005'
+    Test::Kwalitee: '1.22'
     Test::More: '1.001003'
     Test::Pod: '1.48'
     Test::Pod::Coverage: '1.10'
     lib: '0.63'
     strict: '1.08'
     utf8: '1.14'
-    warnings: '1.24'
+    warnings: '1.26'
   perl:
-    original: v5.21.1
+    original: v5.21.3
     qv: 1
     version:
       - 5
       - 21
-      - 1
+      - 3
   perl-config:
     gccversion: 4.8.3
+    git_commit_id: 640eedb9ffcac7a9c2793689044e84bfd9af3045
+    git_describe: v5.21.2-215-g640eedb
     myarchname: x86_64-linux
     osname: linux
   platform: linux
-  uname: 'Linux 3.15.5-aufs x86_64 GenuineIntel GNU/Linux'
+  uname: 'Linux 3.16.1-aufs x86_64 GenuineIntel GNU/Linux'
 x_Dist_Zilla:
   perl:
-    version: '5.021001'
+    version: '5.021003'
   plugins:
     -
       class: Dist::Zilla::Plugin::Bootstrap::lib
@@ -137,7 +140,7 @@ x_Dist_Zilla:
           try_built: '1'
           try_built_method: mtime
       name: Bootstrap::lib
-      version: '1.000004'
+      version: '1.000005'
     -
       class: Dist::Zilla::Plugin::Bootstrap::ShareDir::Dist
       config:
@@ -149,7 +152,7 @@ x_Dist_Zilla:
           try_built: '1'
           try_built_method: mtime
       name: Bootstrap::ShareDir::Dist
-      version: '1.000002'
+      version: '1.001000'
     -
       class: Dist::Zilla::Plugin::MetaConfig
       name: '@Author::KENTNL/MetaConfig'
@@ -172,7 +175,7 @@ x_Dist_Zilla:
           inherit_version: '1'
           meta_noindex: '1'
       name: '@Author::KENTNL/MetaProvides::Package'
-      version: '2.000003'
+      version: '2.001001'
     -
       class: Dist::Zilla::Plugin::MetaData::BuiltWith
       config:
@@ -189,7 +192,7 @@ x_Dist_Zilla:
               - -i
             uname_call: uname
       name: '@Author::KENTNL/MetaData::BuiltWith'
-      version: '1.001000'
+      version: '1.002000'
     -
       class: Dist::Zilla::Plugin::Git::Contributors
       config:
@@ -197,8 +200,9 @@ x_Dist_Zilla:
           include_authors: '0'
           include_releaser: '0'
           order_by: name
+          paths: []
       name: '@Author::KENTNL/Git::Contributors'
-      version: '0.006'
+      version: '0.007'
     -
       class: Dist::Zilla::Plugin::Git::GatherDir
       config:
@@ -246,8 +250,12 @@ x_Dist_Zilla:
       version: '0.019'
     -
       class: Dist::Zilla::Plugin::Test::Kwalitee
+      config:
+        Dist::Zilla::Plugin::Test::Kwalitee:
+          filename: xt/release/kwalitee.t
+          skiptest: []
       name: '@Author::KENTNL/Test::Kwalitee'
-      version: '2.07'
+      version: '2.11'
     -
       class: Dist::Zilla::Plugin::EOLTests
       name: '@Author::KENTNL/EOLTests'
@@ -272,7 +280,7 @@ x_Dist_Zilla:
           test_template: 01-basic.t.tpl
           xt_mode: ~
       name: '@Author::KENTNL/Test::Compile::PerFile'
-      version: '0.002001'
+      version: '0.002002'
     -
       class: Dist::Zilla::Plugin::Test::Perl::Critic
       name: '@Author::KENTNL/Test::Perl::Critic'
@@ -288,7 +296,7 @@ x_Dist_Zilla:
           mantissa: '6'
           normal_form: numify
       name: '@Author::KENTNL/RewriteVersion::Sanitized'
-      version: '0.001002'
+      version: '0.001003'
     -
       class: Dist::Zilla::Plugin::PodWeaver
       config:
@@ -366,7 +374,7 @@ x_Dist_Zilla:
               name: Legal
               version: '4.006'
       name: '@Author::KENTNL/PodWeaver'
-      version: '4.005'
+      version: '4.006'
     -
       class: Dist::Zilla::Plugin::AutoPrereqs
       name: '@Author::KENTNL/AutoPrereqs'
@@ -394,6 +402,10 @@ x_Dist_Zilla:
           default_jobs: '10'
       name: '@Author::KENTNL/MakeMaker'
       version: '5.020'
+    -
+      class: Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes
+      name: '@Author::KENTNL/Author::KENTNL::RecommendFixes'
+      version: '0.003001'
     -
       class: Dist::Zilla::Plugin::ReadmeFromPod
       name: '@Author::KENTNL/ReadmeFromPod'
@@ -459,7 +471,7 @@ x_Dist_Zilla:
         Dist::Zilla::Plugin::Git::Tag:
           branch: ~
           signed: '0'
-          tag: 1.000002-source
+          tag: 1.001000-source
           tag_format: '%v-source'
           tag_message: v%v
           time_zone: local
@@ -470,7 +482,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::Git::NextRelease
       name: '@Author::KENTNL/Git::NextRelease'
-      version: '0.002011'
+      version: '0.002012'
     -
       class: Dist::Zilla::Plugin::BumpVersionAfterRelease
       name: '@Author::KENTNL/BumpVersionAfterRelease'
@@ -513,7 +525,7 @@ x_Dist_Zilla:
         Dist::Zilla::Plugin::Git::Tag:
           branch: releases
           signed: '0'
-          tag: '1.000002'
+          tag: '1.001000'
           tag_format: '%v'
           tag_message: v%v
           time_zone: local
@@ -549,7 +561,7 @@ x_Dist_Zilla:
             - ExtUtils::MakeMaker
             - Test::More
       name: '@Author::KENTNL/Prereqs::Recommend::MatchInstalled'
-      version: '0.002000'
+      version: '0.002001'
     -
       class: Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled
       config:
@@ -562,7 +574,7 @@ x_Dist_Zilla:
             - Dist::Zilla::PluginBundle::Author::KENTNL
             - Dist::Zilla::App::Command::bakeini
       name: '@Author::KENTNL/always_latest_develop_bundle'
-      version: '0.002000'
+      version: '0.002001'
     -
       class: Dist::Zilla::Plugin::Prereqs
       config:
@@ -570,22 +582,6 @@ x_Dist_Zilla:
           phase: develop
           type: requires
       name: '@Author::KENTNL/::Role::BundleDeps'
-      version: '5.020'
-    -
-      class: Dist::Zilla::Plugin::FileFinder::ByName
-      name: corpusfiles
-      version: '5.020'
-    -
-      class: Dist::Zilla::Plugin::AutoPrereqs
-      name: corpus
-      version: '5.020'
-    -
-      class: Dist::Zilla::Plugin::Prereqs
-      config:
-        Dist::Zilla::Plugin::Prereqs:
-          phase: test
-          type: requires
-      name: TestRequires
       version: '5.020'
     -
       class: Dist::Zilla::Plugin::FinderCode
